feat: 로컬 환경 인프라스트럭처 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,28 @@
+spring:
+  profiles:
+    active: local
+  redis:
+    host: localhost
+    port: 6379
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+  jpa:
+    open-in-view: false
+    hibernate:
+      ddl-auto: none
 
+---
+spring:
+  profiles: local
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    properties:
+      hibernate.format_sql: true
+  h2:
+    console:
+      path: /h2
+      enabled: true
