--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     // Validation Starter no longer included in web starters (ƒrom Spring Boot 2.3)
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'it.ozimov:embedded-redis:0.7.2'
+    implementation 'org.apache.httpcomponents:httpclient'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
