fix: 잘못된 검색 전략 구현 수정
- 고가용성을 위해 특정 벤더사에서 검색이 원활하지 않으면 다른 벤더를 통해 검색을 시도했음.
- 그러나 이 전략의 경우, 벤더사가 불안정하다면 사용자 요청마다 응답이 일관성이 없음.
- 예컨대 1페이지 응답은 카카오, 2페이지 응답은 네이버.
- 따라서 지정된 한개의 벤더사를 통해서만 검색 하도록 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,9 @@ security:
       validate-duration: 30M
 
 search:
-  mode: FAST_FAIL # HA | FAST_FAIL
+  mode: FAST_FAIL # FAST_FAIL | RETRY
+  max-retry: 3 # MODE 가 RETRY 일 때만 해당
+  vender: kakao
 
 circuit:
   wait-duration-in-open-state: 3s
@@ -37,7 +39,7 @@ api-client:
     headers:
       Authorization: KakaoAK ${kakao.key}
 
-kakao.key: FIXME-INPUT-YOUR-KEY
+kakao.key: 34f3f0914f182621a2b99db2dd5e45b8
 
 ---
 spring:
